--- a/ct/package.xml
+++ b/ct/package.xml
@@ -7,7 +7,7 @@
   <maintainer email="markusgft@gmail.com">Markus Giftthaler</maintainer>  
   <license>BSD-2</license>
 
-  <buildtool_depend>catkin</buildtool_depend>
+  <buildtool_depend>ament_cmake</buildtool_depend>
   
    <export>
    	  <metapackage />
