--- a/ct_doc/package.xml
+++ b/ct_doc/package.xml
@@ -16,7 +16,7 @@
   <depend>ct_rbd</depend>
   <depend>ct_models</depend>
 
-  <exec_depend>catkin</exec_depend>  <!-- ROS compatibility-->
+  <exec_depend>ament_cmake</exec_depend>  <!-- ROS compatibility-->
 
   <export>    <!-- Specify that this is not a ROS package-->
     <build_type>cmake</build_type>
