--- a/ct_core/CMakeLists.txt
+++ b/ct_core/CMakeLists.txt
@@ -78,7 +78,7 @@ if(${CMAKE_VERSION} VERSION_LESS "3.12.0")
     endif()
 else()
     find_package(Python COMPONENTS Development NumPy QUIET)
-    if (Python_FOUND AND ${Python_VERSION_MAJOR} EQUAL 3)
+    if (Python_FOUND AND Python_VERSION_MAJOR EQUAL 3)
         message(STATUS "Found python " ${Python_VERSION})
         list(APPEND ct_core_COMPILE_DEFINITIONS PLOTTING_ENABLED)
         set(PLOTTING_ENABLED ON)
